# webeff

./: .gitignore  CHANGELOG.md  LICENSE  build.sh  webeff.cabal
app/: Main.hs
app/WebEff/: App.hs  Attribute.hs  DOM.hs  Html.hs  Send.hs  Updated.hs
app/WebEff/DOM/: Attribute.hs  Elements.hs  FFI.hs  Tree.hs  Types.hs
app/WebEff/DOM/FFI/: Classes.hs  Raw.hs  Types.hs
app/WebEff/Html/: Attribute.hs  Event.hs
app/WebEff/Html/Attribute/: Types.hs
pub/: bin.wasm  ghc_wasm_jsffi.js
