cabal-version:      3.14
name:               webeff
version:            0.1.0.0
-- synopsis:
description:        MVC (Model View Controller) style Web framework using Effectful
license:            MIT
license-file:       LICENSE
author:             Frank Staals
maintainer:         frank@fstaals.net
-- copyright:
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -lwasi-emulated-getpid

    build-depends:
        base                     >= 4.20.0.0  && < 5
      -- , hexpat                   >= 0.20.13  && < 0.21
      , bytestring               >= 0.12     && < 0.13
      , text                     >= 2.1.2    && < 2.2
      , effectful                >= 2.5.1    && < 2.6
      , effectful-core           >= 2.5.1    && < 2.6
      , containers               >= 0.7      && < 0.9
      , data-default             >= 0.8      && < 1
      , indexed-traversable      >= 0.1.2.1  && < 0.2
      -- , dependent-map            >= 0.4      && < 0.5
      -- , dependent-sum-template   >= 0.2.0.2  && < 0.3
      -- , some                     >= 1.0.6    && < 1.1
      -- , constraints-extras       >= 0.4.0.2  && < 0.5
      -- , dependent-sum            >= 0.7.2.0  && < 0.8
      , ghc-experimental         >= 0.1

      , hspec                    >= 2.11.12  && < 2.12

    build-tool-depends: hspec-discover:hspec-discover >= 2.11.12

    default-language: GHC2024
    default-extensions:
        DataKinds
      , TypeFamilies
      , GADTs
      , KindSignatures
      , ScopedTypeVariables
      , DerivingStrategies
      , DerivingVia
      , GeneralizedNewtypeDeriving
      , DeriveGeneric
      , DeriveFunctor
      , PatternSynonyms
      , TupleSections
      , LambdaCase
      , ViewPatterns
      , FunctionalDependencies
      , PartialTypeSignatures
      , QuantifiedConstraints
      , DefaultSignatures

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src

executable webeff
    import:           warnings
    main-is:          Main.hs
    ghc-options: -no-hs-main -optl-mexec-model=reactor -optl-Wl,--export=hs_start
    other-modules:
        WebEff.App

        WebEff.Attribute
        WebEff.DOM
        WebEff.DOM.Attribute
        WebEff.DOM.FFI
        WebEff.DOM.FFI.Types

        WebEff.DOM.FFI.Classes
        WebEff.DOM.FFI.Raw

        WebEff.DOM.Tree
        WebEff.Html
        WebEff.Html.Attribute
         -- internal

        WebEff.Send
        WebEff.Updated

        -- internal
        WebEff.Html.Attribute.Types


    -- other-extensions:
    build-depends:
        webeff

    hs-source-dirs:   app
    default-language: GHC2024

test-suite webeff-test
    import:           warnings
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        webeff
